# ls_new

./: CMakeLists.txt  LICENSE  README.md
include/: filesystem.h  main.h  output.h  threads.h
src/: filesystem.c  filesystem.h  main.c  main.h  output.c  threads.c
